tests/machine/x/ocaml/group_by_conditional_sum.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/group_by_conditional_sum.ml", line 33, characters 34-37:
33 |       __res1 := (if x.flag then x.val else 0) :: !__res1;
                                       ^^^
Error: Syntax error


Context (around line 33):
  31 |     __res0 := [("cat",Obj.repr (g.key));("share",Obj.repr (((sum (let __res1 = ref [] in
  32 |   List.iter (fun x ->
  33 |       __res1 := (if x.flag then x.val else 0) :: !__res1;
  34 |   ) g;
  35 | List.rev !__res1)
